--- a/ilm/src/css/detailcss.css
+++ b/ilm/src/css/detailcss.css
@@ -1,4 +1,12 @@
 /* 전체 컨테이너 */
+body{
+    margin: 0;
+}
+
+#addpading{
+    margin: 8px;
+}
+
 #main {
     height: 100vh;
     margin: auto;
@@ -16,25 +24,25 @@
     background-repeat: no-repeat;
     background-position: center;
 
-
-    height: 150px;
-    width: 90%;
+    height: 110px;
+    width: 100%;
     text-align: center;
     padding: 20px;
+    padding-left: 0;
     margin: auto;
 }
 
 #header h1 {
     font-size: 2.5rem;
     font-weight: bold;
-    line-height: 110px;
+    line-height: 55px;
 }
 
 /* 메인 콘텐츠 */
 #mainContent {
     margin-top: 20px;
     border-bottom: 1px solid #cccccc;
-    padding-bottom: 100px;
+    padding-bottom: 80px;
 }
 #mainContent span {
     color: gray;
@@ -59,6 +67,7 @@
     max-width: 600px;
     max-height: 620px;
     object-fit: scale-down;
+    margin-top: 30px;
     margin-right: 10px;
 }
 
@@ -99,7 +108,7 @@
 
     border-right: 2px solid black;
     padding-right: 5px;
-    margin-right: 5px;
+    margin-right: 10px;
 }
 
 
@@ -119,9 +128,10 @@
 
 /* 전시 정보 섹션 */
 #contentInfo {
-    background-color: #cccccc;
+    background-color: #c9c8c83b;
     padding: 40px;
     margin-top: 40px;
+    min-height: 250px
 }
 
 .infoWrapper {
@@ -135,11 +145,15 @@
 }
 
 #infoText h4 {
-    font-size: 1.5rem;
+    font-size: 2rem;
+    font-weight: lighter;
+    margin: 20px 0;
+    color: rgba(114, 114, 114, 0.87);
 }
 
 #infoText p {
     margin-bottom: 20px;
+    color: gray;
 }
 
 #infoText button {
